--- a/Shopify App/Modules/Product/View/ProductCell/ProductOFBrandCollectionViewCell.xib
+++ b/Shopify App/Modules/Product/View/ProductCell/ProductOFBrandCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -82,7 +83,9 @@
                                 </constraints>
                                 <color key="tintColor" red="0.85882352939999995" green="0.18823529410000001" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="heart" catalog="system"/>
+                                <state key="normal">
+                                    <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                                </state>
                                 <connections>
                                     <action selector="didPressedOnFavBtn:" destination="gTV-IL-0wX" eventType="touchUpInside" id="ZJ3-dQ-2zd"/>
                                 </connections>
