--- a/Shopify App/Modules/category/View/ListproductCell/ProductCollectionViewCell.xib
+++ b/Shopify App/Modules/category/View/ListproductCell/ProductCollectionViewCell.xib
@@ -34,28 +34,32 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="n5G-to-5m7">
                                 <rect key="frame" x="216.33333333333334" y="4" width="310.66666666666663" height="163"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameofprouduct" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgR-VA-za3">
-                                        <rect key="frame" x="0.0" y="0.0" width="119" height="40.333333333333336"/>
-                                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameofprouduct" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgR-VA-za3">
+                                        <rect key="frame" x="0.0" y="0.0" width="111.66666666666667" height="38"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xvu-Vl-yAQ">
-                                        <rect key="frame" x="0.0" y="40.333333333333336" width="29.333333333333332" height="30.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="38" width="29.333333333333332" height="31"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
                                         <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stars 1" translatesAutoresizingMaskIntoConstraints="NO" id="0fT-c4-EBf">
-                                        <rect key="frame" x="0.0" y="70.666666666666671" width="109.66666666666667" height="49.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="69" width="109.66666666666667" height="50.333333333333343"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$ 50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sv1-mP-WXw">
-                                        <rect key="frame" x="0.0" y="120" width="35" height="43"/>
+                                        <rect key="frame" x="0.0" y="119.33333333333336" width="35" height="43.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Sv1-mP-WXw" secondAttribute="bottom" id="9ef-QY-5S2"/>
+                                    <constraint firstItem="Sv1-mP-WXw" firstAttribute="leading" secondItem="n5G-to-5m7" secondAttribute="leading" id="bcn-mL-s6O"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
